Fully connected login and getUserDetails

--- a/ICCReservasServer/appsettings.json
+++ b/ICCReservasServer/appsettings.json
@@ -11,6 +11,6 @@
   },
   "ApplicationSettings": {
     "JWT_Secret": "ICC-Semper-Altius",
-    "Client_URL": "http://localhost/4200"
+    "Client_URL": "http://localhost:4200"
   }
 }
