added template controllers ForgotPassword and ResetPassword. added EmailService

--- a/ICCReservasServer/appsettings.json
+++ b/ICCReservasServer/appsettings.json
@@ -12,5 +12,12 @@
   "ApplicationSettings": {
     "JWT_Secret": "ICC-Semper-Altius",
     "Client_URL": "http://localhost:4200"
+  },
+  "EmailConfiguration": {
+    "From": "jorodriguez@cumbrescaracas.edu.ve",
+    "SmtpServer": "smtp.office365.com",
+    "Port": 587,
+    "Username": "jorodriguez@cumbrescaracas.edu.ve",
+    "Password": "Rome2021."
   }
 }
