--- a/ICCReservasServer/ICCReservasServer.csproj
+++ b/ICCReservasServer/ICCReservasServer.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\EmailService\EmailService.csproj" />
     <ProjectReference Include="..\Entities\Entities.csproj" />
   </ItemGroup>
 
