removed Materias and minor changes

--- a/ICCReservasServer/appsettings.json
+++ b/ICCReservasServer/appsettings.json
@@ -14,10 +14,10 @@
     "Client_URL": "http://localhost:4200"
   },
   "EmailConfiguration": {
-    "From": "jorodriguez@cumbrescaracas.edu.ve",
+    "From": "soporteticket@cumbrescaracas.edu.ve",
     "SmtpServer": "smtp.office365.com",
     "Port": 587,
-    "Username": "jorodriguez@cumbrescaracas.edu.ve",
-    "Password": "Rome2021."
+    "Username": "soporteticket@cumbrescaracas.edu.ve",
+    "Password": "2022$$Rst"
   }
 }
